# agbaye

./: .gitignore  README.md  pyproject.toml
config/: sample_config.json
scripts/: create_lid_data.sh  train_lid.sh
src/agbaye/: __main__.py  arguments.py  executors.py  hf_parser.py
src/agbaye/lid/: __init__.py  cleaning_utils.py  filter.py  openlid.py  prediction_utils.py  train_fasttext_model.py  ubc_afrolid.py
src/agbaye/lid/training/: data.py  train_fasttext.py  train_transformer.py
wmqds_submissions/fasttext/: Dockerfile  Dockerfile.aws  pyproject.toml  requirements.txt
wmqds_submissions/fasttext/app/: main.py
wmqds_submissions/fasttext/app/api/endpoints/: model.py
wmqds_submissions/fasttext/app/api/schemas/: model.py
wmqds_submissions/fasttext/app/domain/: cleaning_utils.py  model.py
