[project]
name = "agbaye"
version = "0.1.0"
description = "Preprocessing Common Crawl for African Text"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Akintunde 'theyorubayesian' Oladipo", email = "akintunde.oladipo@taresco.org" },
]
dependencies = [
    "cleantext>=1.1.4",
    "datatrove[cli,io,processing,s3]>=0.6.0",
    "emoji>=2.14.1",
    "pycountry>=24.6.1",
    "python-dotenv>=1.1.1",
    "typer>=0.17.4",
]

[project.optional-dependencies]
azure = [
    "adlfs>=2025.8.0",
]
lid-training = [
    "scikit-learn>=1.7.2",
    "wandb>=0.22.0",
]
mediapipe = [
    "mediapipe>=0.10.14",
]
afrolid = [
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
agbaye = "agbaye.__main__:main"

[tool.uv]
package = true
default-groups = ["dev"]
