[project]
name = "agbaye_lid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cleantext==1.1.4",
    "emoji==2.14.1",
    "fastapi==0.117.1",
    "fasttext-numpy2-wheel==0.9.2",
    "jwt>=1.4.0",
    "mangum==0.10.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "websockets>=15.0.1",
]
